--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -16,7 +16,10 @@
         <h:link outcome="/pages/image/List" value="Show All Image Items"/>
         <br />
         <h:link outcome="/pages/user/List" value="Show All User Items"/>
+        <br />
+        <h:link outcome="/user/List" value="Show All User Items"/>
     </h:body>
+
 
 
 
